ui/src/app/shared/components/pokemon/pokemon-card/pokemon-card.component.scss
@use "/src/app/core/styles/variables.scss" as *;

$pokemonCardWidth: var(--pokemonCardWidth);
$sectionHeight: 3em;
$moveHeight: calc($pokemonCardHeight/4);
$statsHeight: 5vh;
$paddingBig: 0.4em;
$padding: 0.2em;

.section
{
  height: 100%;
  cursor: pointer;
  border-radius: 5px;
  position: relative;
  border: 1px solid transparent;
  padding: 2px;
}

.section-content
{
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
}

.pokemon
{
  width: $pokemonCardWidth;
  min-height: $pokemonCardHeight;
  background-color: var(--bg-color-2);
  color: var(--text-color);
  border-radius: 5px;
  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.26);
  position: relative;
}

.profile
{
  display: grid;
  grid-template-columns: calc(30em * 0.35) calc(30em * 0.25) calc(30em * 0.40);
  height: $pokemonCardHeight;
}

.left
{
  text-align: left;
  padding: $paddingBig;
  display: grid;
  grid-template-rows: 25% 25% 25% 25%;
  align-items: center;
  position: relative;
}

.moves
{
  display: grid;
  grid-template-rows: repeat(4, 23%);
  gap: 0.2em;
}

.move
{
  width: 100%;
  height: 100%;
  max-height: 100%;
  border-radius:5px;
  display: grid;
  grid-template-columns: 20% 80% 0%;
  grid-template-rows: 100%;
  justify-items: start;
  align-content: center;
}

.type
{
  display: flex;
  align-items: center;
  flex-direction: row-reverse;     
}

.dex-number
{
  color: var(--error);
  font-size: 0.8em;
  margin-right: 0.2em;
}

.option
{
  width: 1.5em;
  height: 1.5em;
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 5px;
}

.option-disabled
{
  cursor: pointer;
  background-color: var(--bg-color-3);
}

.stat
{
  display: grid;
  justify-items: center;
  align-items: center;
  grid-template-columns: 2em 1fr 2em;
  column-gap: 0.2em;
  width: 100%;
}

.maxed
{
  border: 0.15em solid black;
}

.notes
{
  background-color: var(--bg-color-3);
  height: $pokemonCardHeight;
  padding: 1em;
  overflow-x: scroll;
}

.notes-editor
{
  background-color: var(--bg-color-3);
  height: $pokemonCardHeight;
  padding: 1em;

  textarea
  {
    width: 100%;
    height: 100%;
  }
}

.card-buttons
{
  display: flex;
  justify-content: space-evenly;
}

//----------------------------------------------------------------------------------------------------
//poke-tooltip 
.poke-tooltip-selected
{
  border: 1px solid var(--text-color);
  background: none !important;
  border-radius: 5px;
}

.one-piece
{
  padding: $padding;
  background-color: var(--bg-color-2);
  border-radius: 5px;
}

.one-line
{
  background-color: var(--bg-color-2);
  padding: $padding;
  border-radius: 5px;
  white-space: nowrap;
  overflow: hidden;
  border-radius: 5px;
}

.link
{
  text-decoration: none;
  cursor: pointer;
  color: var(--text-color-link);

  &:hover
  {
    text-decoration: underline ;
  }
}

.type-category
{ 
  display: flex;
  flex-direction: column;
  width: 100%;
  align-items: center;
  padding: 0.2em;
}

.type-category-text
{
  display: flex;
  justify-content: end;
}

.type-category-icons
{
  display: grid;
  grid-template-columns: 50% 50%;

  .lastType
  {
    grid-column: 1 / 3;
    justify-self: center;
  }
}

.move-head
{
  display: flex;
  justify-content: space-between;
}

.stat-atribute
{
  background-color: var(--bg-color-3);
  padding: $padding;
  border-radius: 5px;
  display: flex;
  align-items: center;
}

.stat-property-title
{
  font-weight: bold;
  margin-right: $padding;
}

.maxed
{
  outline: 0.1em solid black;
}

.empty-section
{
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}

.empty-line
{
  width: 1em;
  height: 1px;
  padding: 0.05em;
  background-color: var(--text-color);
  border-radius: 20px;
}

.pokemon-loading
{
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: $pokemonCardWidth/2;
  height: $pokemonCardWidth/2;
  display: flex;
  justify-content: center;
  align-items: center;
}

.pokemon-error
{
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 5em;
  height: 5em;
  display: flex;
  justify-content: center;
  align-items: center;
}

@media (max-width: $tabletPortrait) 
{
  .profile
  {
    display: grid;
    grid-template-columns: 40% 40%;
    justify-content: space-between;
    height: fit-content;
    padding-bottom: 0.2em;
  }

  .moves
  {
    height: fit-content;
    display: grid;
    grid-template-columns: repeat(2, 50%);
    grid-template-rows: repeat(2, 50%);
    gap: 0.2em;
    grid-column: 1 / 3;
    align-items: center;
  }  

  .left
  {
    position: static;
  }

  .section
  {
    position: static;
  }

  .section-content
  {
    position: static;
  }

  .move
  {
    position: static;
  }

  .poke-tooltip-wrapper
  {
    position: relative;
  }
}

@media (max-width: $tabletLandscape) and (min-width: $tabletPortrait) 
{
  .profile
  {
    display: grid;
    grid-template-columns: 25% 30% 45%;
    height: $pokemonCardHeight;
  }
}

